ci: add backtrace, to find discrepency in test

--- a/.github/workflows/synth.yml
+++ b/.github/workflows/synth.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: dtolnay/rust-toolchain@nightly
-      - run: cargo test
+      - run: RUST_BACKTRACE=1 cargo test
